# YouSayHaeYou

./: .gitignore  README.md
Project/: Git_Command.txt
Project/Datasets/: conv.csv  link.md
Project/Datasets/amazon_fashon_data_2020_json/: shape.txt
Project/Datasets/amazon_fashon_data_sample_csv/: shape.txt
Project/Doc/: useful websites for chatbot.txt
Project/Model/: modelExplain.txt
Project/test/: app_test.py  bak_app_test.py  chat_page.py  chatbot_core.py  chatbot_core1.py  memo.md  qa_data.csv  template.txt  test.py
Project/travel_chat/: README.md  app_kor.py  chatbot_add_agent.py  chatbot_core.py  data_core.py  requirements.txt  route_core.py
Project/travel_chat/pages/: auth_core1.py  notice.py
Project/trip_plan/: README.md  main.py  pyproject.toml  test.ipynb  test.py  test_copy.ipynb  test_copy2.ipynb
Project/trip_planner_frontAdded/: README.md  app.py  main.py  requirements.txt  style.css
Project/trip_planner_frontAdded/core_files/: auth_core.py  chatbot_add_agent.py  chatbot_core.py  data_core.py  flight_core.py  hotel_core.py  route_core.py
Project/trip_planner_frontAdded/page_lists/: auth_page.py  chat_page.py  db_page.py  home_page.py  route_page.py  search_page.py
Project/tutorial/: 패션_추천_챗봇_빵형의_개발도상국.ipynb
minutes/: 04_12_의상분류모델탐색.txt
자료방/: WBS_sample.xlsx  link.md  memo.md  useful websites for chatbot.txt
자료방/daily/: 0424.md  0425_오전.md  0426_오전  0426_오전.md  0429.md  0430.md  until_0423.md
자료방/minutes/: 0419_오전.md  04_15.txt
